unpackaged/main/default/objects/EmailMessage/fields/EmailTrackingId__c.field-meta.xml
<CustomField>
    <fullName>EmailTrackingId__c</fullName>
    <description>Used to match email with SendGrid</description>
    <inlineHelpText>Used to match email with SendGrid</inlineHelpText>
    <label>EmailTrackingId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>