unpackaged/main/default/objects/EmailMessage/fields/fx_Email_Opened__c.field-meta.xml
<CustomField>
    <fullName>fx_Email_Opened__c</fullName>
    <description>Formula field - Returns true/checked IF FirstOpenedDate is not blank / null, ELSE false/unchecked</description>
    <formula>NOT(ISBLANK(FirstOpenedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field - Returns true/checked IF FirstOpenedDate is not blank / null, ELSE false/unchecked</inlineHelpText>
    <label>fx Email Opened</label>
    <type>Checkbox</type>
</CustomField>