unpackaged/main/default/objects/EmailMessage/fields/Is_Rejection_Email__c.field-meta.xml
<CustomField>
    <fullName>Is_Rejection_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to manually set an EmailMessage record as a Rejection Email.</description>
    <inlineHelpText>Field to manually set an EmailMessage record as a Rejection Email.</inlineHelpText>
    <label>Is Rejection Email</label>
    <type>Checkbox</type>
</CustomField>