unpackaged/main/default/objects/EmailMessage/fields/Zapier_Last_Update_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Zapier_Last_Update_DateTime__c</fullName>
    <description>Used in SendGrid &gt; Zapier &gt; Salesforce integration to track Open message activities from SendGrid back to Salesforce</description>
    <inlineHelpText>Used in SendGrid &gt; Zapier &gt; Salesforce integration to track Open message activities from SendGrid back to Salesforce</inlineHelpText>
    <label>Zapier Last Update DateTime</label>
    <type>DateTime</type>
</CustomField>