unpackaged/main/default/objects/EmailMessage/validationRules/No_Edit_Email_Messages.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Edit_Email_Messages</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( ISNEW() ) &amp;&amp; OR( $Profile.Name = &#39;Litify Intakes Agent&#39;, $Profile.Name = &#39;QC - Litify&#39;)</errorConditionFormula>
    <errorMessage>Your profile is not allowed to edit Email Messages</errorMessage>
</ValidationRule>